readme
Updated README to reflect project focus on authentication microservice for Dron Wars, including features, tech stack, and setup instructions.